--- a/Frontend---Turisme-sostenible/src/app/components/map/map.component.html
+++ b/Frontend---Turisme-sostenible/src/app/components/map/map.component.html
@@ -67,7 +67,7 @@
         <div class="form-check form-switch">
           <input [(ngModel)]="showNoise" (change)="toggleNoiseHeatmap()" class="form-check-input bg-english-green-light" type="checkbox" id="flexSwitchNoise" aria-label="Mostra o amaga nivells de soroll" checked>
           <label class="form-check-label" for="flexSwitchNoise">
-            Niveles de soroll
+            Nivells de soroll
           </label>
         </div>
       </div>
